<resources>
    <string name="app_name">WellnessPal</string>
    <string name="logs">Logs</string>
    <string name="resources">Resources</string>
    <string name="grad_pets">Pet Archive</string>
    <string name="profile">Profile</string>
    <string name="pet">Pet</string>
    <string name="welcome_page_title">Welcome to Wellness Pal!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="submit">Submit</string>
    <string name="enterWaterLog">Enter the ounces of water drank</string>
    <string name="water_goal"># Ounces of Water</string>
    <string name="num_meals"># Meals Eaten</string>
    <string name="hours_sleep">"# Hours Sleep"</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="user_name">Username:</string>
    <string name="pets_graduated">Pets Retired:</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old:</string>
    <string name="new_password">New:</string>
    <string name="repeat_new_password">Re-Enter New:</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_goals">Change Goals</string>
    <string name="sleep">Sleep</string>
    <string name="water">Water</string>
    <string name="meals">Meals</string>
    <string name="ok">OK</string>
    <string name="delete_account">Delete Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_pet_title">Create A New Pet</string>
    <string name="empty_field_err">ERROR: Field cannot be empty.</string>
    <string name="non_positive_num_err">ERROR: please enter a positive number.</string>
    <string name="waterGoalField">Water Goal:</string>
    <string name="meals_left_to_reach_goal">Meals left to reach goal: %1$s</string>
    <string name="goalsMetNote">Note: You have met your eating goal for the day! You can still submit meal logs, but they won\'t count towards your pet\'s growth.</string>
    <string name="meal_goal">Meal Goal: %1$s</string>
    <string name="oz_water_left_to_reach_goal">Oz. water left to reach goal: %1$s</string>
    <string name="water_goal_note">Note: You have met your water goal for the day! You can still submit meal logs, but they won\'t count towards your pet\'s growth.</string>
    <string name="waterGoal">Water Goal: %1$s</string>
    <string name="username">username\n</string>
    <string name="signin">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="age">Age: %1$s</string>
    <string name="next_level_up_age_3">Next Level Up: Age 3</string>
    <string name="next_level_up_age_6">Next Level Up: Age 6</string>
    <string name="next_level_up_info_age_9">Next Level Up Info: Age 9</string>
    <string name="daily_goals">Daily Goals</string>
    <string-array name="colors_array">
        <item>Blue</item>
        <item>Purple</item>
        <item>Red</item>
    </string-array>

</resources>