<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_petInfo"
        android:icon="@drawable/baseline_pets_24"
        android:title="@string/pet" />

    <item
        android:id="@+id/navigation_logs"
        android:icon="@drawable/baseline_analytics_24"
        android:title= "@string/logs" />

    <item
        android:id="@+id/navigation_resources"
        android:icon="@drawable/resources_icon"
        android:title="@string/resources" />

    <item
        android:id="@+id/navigation_gradPets"
        android:icon="@drawable/baseline_cabin_24"
        android:title="@string/grad_pets" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />

</menu>