<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/buttonSignOut"
        android:layout_width="117dp"
        android:layout_height="59dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_out"
        android:textSize="17dp"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintEnd_toStartOf="@id/guideline20"
        app:layout_constraintStart_toEndOf="@id/guideline19"
        app:layout_constraintTop_toBottomOf="@id/editTextFieldChangeSleep"
        app:layout_constraintVertical_bias="0.20" />

    <Button
        android:id="@+id/buttonDeleteAccount"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:gravity="center_horizontal"
        android:text="@string/delete_account"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline20"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonResetPassword"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/textViewHeaderFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/textViewHeaderLastName"
        app:layout_constraintStart_toEndOf="@id/guideline19"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/guideline21"/>

    <TextView
        android:id="@+id/textViewHeaderLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderFirstName"
        app:layout_constraintBottom_toTopOf="@+id/textViewHeaderUsername"/>

    <TextView
        android:id="@+id/textViewHeaderUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toEndOf="@id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderLastName" />

    <TextView
        android:id="@+id/textViewHeaderPetsGraduated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/pets_graduated"
        app:layout_constraintStart_toEndOf="@id/guideline19"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderUsername" />


    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password"
        app:layout_constraintEnd_toStartOf="@id/guideline20"
        app:layout_constraintStart_toEndOf="@id/guideline19"
        app:layout_constraintTop_toBottomOf="@id/buttonSignOut" />

    <TextView
        android:id="@+id/textHeaderChangeGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"
        android:text="@string/change_goals"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <EditText
        android:id="@+id/editTextFieldChangeWater"
        android:layout_width="133dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/water"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFieldOldPassword"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderChangeGoals" />

    <EditText
        android:id="@+id/editTextFieldChangeMeals"
        android:layout_width="127dp"
        android:layout_height="49dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/meals"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFieldNewPassword"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextFieldChangeWater" />

    <EditText
        android:id="@+id/editTextFieldChangeSleep"
        android:layout_width="134dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/sleep"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFieldReEnterNewPass"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextFieldChangeMeals" />

    <Button
        android:id="@+id/buttonChangeWater"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFieldChangeWater"
        app:layout_constraintEnd_toStartOf="@id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/editTextFieldChangeWater" />

    <Button
        android:id="@+id/buttonChangeMeals"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFieldChangeMeals"
        app:layout_constraintEnd_toStartOf="@id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/editTextFieldChangeMeals" />

    <Button
        android:id="@+id/buttonChangeSleep"
        android:layout_width="57dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFieldChangeSleep"
        app:layout_constraintEnd_toStartOf="@id/guideline20"
        app:layout_constraintTop_toTopOf="@+id/editTextFieldChangeSleep" />

    <TextView
        android:id="@+id/textViewFieldFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewHeaderFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewFieldLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewHeaderLastName"
        app:layout_constraintTop_toBottomOf="@+id/textViewFieldFirstName" />

    <TextView
        android:id="@+id/textViewFieldUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewHeaderUsername"
        app:layout_constraintTop_toBottomOf="@+id/textViewFieldLastName" />

    <TextView
        android:id="@+id/textViewFieldPetsGraduated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/textViewHeaderPetsGraduated"
        app:layout_constraintTop_toBottomOf="@id/textViewFieldUsername" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />


</androidx.constraintlayout.widget.ConstraintLayout>